footer link update

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1645,7 +1645,7 @@
         color: #ffffff;
     }
     .footer-section a{
-        color: #78ebd4;
+        color: #d6b170;
   		transition: 0.7s;
     }
     .footer-container{
