--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -117,7 +117,7 @@
         box-shadow: 0 4px 6px 0 rgba(12,0,46,.05);
     }
     .header-scrolled .navbar-brand img{
-        width: 190px;
+        width: 150px;
         height: auto;
     }
     .header-scrolled .nav-link-menu{
@@ -158,8 +158,8 @@
         align-items: center;
     }
     .navbar-brand img {
-        width: 180px;
-		margin-top: -10px;
+        width: 150px;
+		margin-top: 0;
 		height: auto;
     }
 	.navbar-brand-logo.logo-scroll{
@@ -1311,7 +1311,10 @@
 		box-shadow: 0 5px 40px rgba(0,0,0,0.15);
     }
     .testimonials-img img{
-		width: 100%;
+		width: 250px;
+        border-radius: 250px;
+        display: block;
+        margin: 0 auto;
 	}
     .testimonials-container h3{
         font-family: Poppins;
@@ -1522,15 +1525,22 @@
     }
     .faq-accordion .panel{
         background-color: transparent !important;
+        margin-bottom: 30px;
     }
     .faq-accordion .panel p{
-        color: #002c61;
-        font-family: Quicksand;
-        font-size: 15px;
-        font-weight: 600;
-		margin: 0 0 20px 0;
-		padding-bottom: 25px;
+        color: #002c61 !important;
+        font-family: Quicksand !important;
+        font-size: 15px !important;
+        font-weight: 600 !important;
+		margin: 0 0 10px 0;
+		padding-bottom: 10px;
         line-height: 1.5;
+    }
+    .faq-accordion .panel ul li{
+        color: #002c61 !important;
+        font-family: Quicksand !important;
+        font-size: 15px !important;
+        font-weight: 600 !important;
     }
     @media screen and (max-width: 991.98px){
         .faq-title{
@@ -1824,3 +1834,10 @@
             padding-left: 40px;
         }
     }
+
+
+/*CUSTOM*/
+.owl-carousel .owl-item img
+{
+    transform: scale(1.2) !important;
+}
